--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/Joselyncherrez/Proyecto_Integrador_Grupo_4#readme",
   "dependencies": {
+    "body-parser": "^1.19.1",
+    "cors": "^2.8.5",
     "express": "^4.17.2",
     "hbs": "^4.2.0",
     "pg": "^8.7.1"
